# parachain-dev

./: README.md
substrate-parachain-template-extend-ocw-demo/pallets/ocw-demo/: Cargo.toml
substrate-parachain-template-extend-ocw-demo/pallets/ocw-demo/src/: lib.rs
substrate-parachain-template-extend-ocw-demo/runtime/: Cargo.toml
substrate-parachain-template-extend-ocw-demo/runtime/src/: lib.rs
tested-on-rococo-local/substrate-parachain-OcwInfura/pallets/ocw-infura-demo/: Cargo.toml
tested-on-rococo-local/substrate-parachain-OcwInfura/pallets/ocw-infura-demo/src/: lib.rs
tested-on-rococo-local/substrate-parachain-OcwInfura/runtime/: Cargo.toml
tested-on-rococo-local/substrate-parachain-OcwInfura/runtime/src/: lib.rs
