[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-keystore',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-keystore/std',
]


[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'


[dependencies]
serde = { version = "1.0.101", default-features = false, features = ['derive']  }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
sp-std = { version = '3.0', default-features = false }
sp-keystore = { version = '0.9', optional = true }
sp-arithmetic = { version = '3.0', default-features = false }
parity-scale-codec = { version = '2.0.0', default-features = false, features = ['derive'] }
parking_lot = '0.11'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[package]
authors = ['Anonymous']
description = 'FRAME pallet template for defining custom runtime logic for offchain worker.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'ocw-demo'
readme = 'README.md'
repository = 'https://github.com/paritytech/substrate/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
